--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,9 @@
   "source": "https://github.com/scitran-apps/dicom-mr-classifier",
   "license": "Apache-2.0",
   "flywheel": "0",
-  "version": "0.3.3",
+  "version": "0.4.0",
   "custom": {
-    "docker-image": "scitran/dicom-mr-classifier:0.3.3"
+    "docker-image": "scitran/dicom-mr-classifier:0.4.0"
   },
   "config": {
     "timezone": {
@@ -28,6 +28,9 @@
         ]
       },
       "description": "Archive (.zip) containing DICOM files."
+    },
+    "classifications": {
+      "base": "context"
     }
   }
 }
